--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <!-- About Me -->
             <section class="section about">
                 <h2><i class="fas fa-info-circle" aria-hidden="true"></i> Tentang Saya</h2>
-                <p>Saya lulusan Pondok Pesantren Nabil Husein yang bersemangat dalam teknologi dan pelayanan. Berpengalaman sebagai kasir, juru masak, pekerja lapangan, dan pengembang web front-end, saya memiliki keterampilan komunikasi, kerja tim, dan adaptasi yang kuat. Aktif mengembangkan proyek teknologi seperti website dan alat pengembang, serta berbagi pengetahuan melalui tutorial YouTube. Saya siap berkontribusi secara inovatif dan solutif.</p>
+                <p>Saya lulusan Pondok Pesantren.Berpengalaman sebagai kasir, juru masak, pekerja lapangan, dan pengembang web front-end, saya memiliki keterampilan komunikasi, kerja tim, dan adaptasi yang kuat. Aktif mengembangkan proyek teknologi seperti website dan alat pengembang, serta berbagi pengetahuan melalui tutorial YouTube. Saya siap berkontribusi secara inovatif dan solutif.</p>
             </section>
 
             <!-- Personal Profile -->
