--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <!-- About Me -->
             <section class="section about">
                 <h2><i class="fas fa-info-circle" aria-hidden="true"></i> Tentang Saya</h2>
-                <p>Saya lulusan Pondok Pesantren. Berpengalaman sebagai kasir, juru masak, pekerja lapangan, dan pengembang web front-end, saya memiliki keterampilan komunikasi, kerja tim, dan adaptasi yang kuat. Aktif mengembangkan proyek teknologi seperti website dan alat pengembang, serta berbagi pengetahuan melalui tutorial YouTube. Saya siap berkontribusi secara inovatif dan solutif.</p>
+                <p>Saya lulusan Smk Negeri 6 Samarinda. Berpengalaman sebagai kasir, juru masak, pekerja lapangan, dan pengembang web front-end, saya memiliki keterampilan komunikasi, kerja tim, dan adaptasi yang kuat. Aktif mengembangkan proyek teknologi seperti website dan alat pengembang, serta berbagi pengetahuan melalui tutorial YouTube. Saya siap berkontribusi secara inovatif dan solutif.</p>
             </section>
 
             <!-- Personal Profile -->
@@ -63,6 +63,11 @@
                     <h3>Pondok Pesantren Nabil Husein</h3>
                     <p class="period">2019 - 2022</p>
                     <p>Mempelajari nilai-nilai kepemimpinan, disiplin, dan kerja sama tim melalui program pesantren.</p>
+                </div>
+                <div class="item">
+                    <h3>SMK Negeri 6 Samarinda</h3>
+                    <p class="period">2022 - 2025</p>
+                    <p>Jurusan Teknik Pengelasan, mempelajari keterampilan pengelasan, teknologi fabrikasi logam, dan keselamatan kerja.</p>
                 </div>
             </section>
 
