--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <!-- About Me -->
             <section class="section about">
                 <h2><i class="fas fa-info-circle" aria-hidden="true"></i> Tentang Saya</h2>
-                <p>Saya lulusan Smk Negeri 6 Samarinda. Berpengalaman sebagai kasir, juru masak, pekerja lapangan, dan pengembang web front-end, saya memiliki keterampilan komunikasi, kerja tim, dan adaptasi yang kuat. Aktif mengembangkan proyek teknologi seperti website dan alat pengembang, serta berbagi pengetahuan melalui tutorial YouTube. Saya siap berkontribusi secara inovatif dan solutif.</p>
+                <p>Lulusan SMK Negeri 6 Samarinda dengan pengalaman sebagai kasir, juru masak, pekerja lapangan, dan pengembang web front-end. Memiliki keterampilan komunikasi, kerja tim, dan adaptasi yang kuat, aktif mengembangkan proyek teknologi seperti website dan alat pengembang, serta berbagi pengetahuan melalui tutorial YouTube. Berkomitmen untuk memberikan kontribusi inovatif di bidang teknologi.</p>
             </section>
 
             <!-- Personal Profile -->
@@ -47,7 +47,7 @@
                     <li><i class="fas fa-envelope" aria-hidden="true"></i> <span class="label">Email:</span> <a href="mailto:squadofthehervian@gmail.com">squadofthehervian@gmail.com</a></li>
                     <li><i class="fas fa-phone" aria-hidden="true"></i> <span class="label">WhatsApp:</span> <a href="https://wa.me/6282350265164">0823-5026-5164</a></li>
                     <li><i class="fas fa-map-marker-alt" aria-hidden="true"></i> <span class="label">Alamat:</span> <a href="https://maps.app.goo.gl/FZuBnbGTTbbUQZCV9" target="_blank">Jl. Kh. Wahid Hasyim II Gg. Wahyu</a></li>
-                    <li><i class="fas fa-globe" aria-hidden="true"></i> <span class="label">Portfolio:</span> <a href="https://bidzz-rawr.github.io/ABOUT-ME" target="_blank">Lihat Portfolio</a></li>
+                    <li><i class="fas fa-globe" aria-hidden="true"></i> <span class="label">Portfolio:</span> <a href="https://bidzzofficial.my.id" target="_blank">Lihat Portfolio</a></li>
                 </ul>
             </section>
 
@@ -57,7 +57,9 @@
                 <div class="item">
                     <h3>MTs Nabil Husein</h3>
                     <p class="period">2019 - 2022</p>
-                    <p>Menyelesaikan pendidikan menengah dengan fokus pada studi agama dan akademik.</p>
+                    <p>Menyelesaikan pendidikan menengah dengan fokusвіт
+
+                    fokus pada studi agama dan akademik.</p>
                 </div>
                 <div class="item">
                     <h3>Pondok Pesantren Nabil Husein</h3>
@@ -134,6 +136,18 @@
                     <p>Membuat alat berbasis web untuk menganalisis database Firebase publik secara real-time, dengan desain modern dan fitur copy satu klik.</p>
                     <p><a href="https://bidzz-rawr.github.io/Firebase-Breaker" target="_blank">Kunjungi Situs</a></p>
                     <p><a href="https://github.com/BIDZZ-RAWR/Firebase-Breaker" target="_blank">Lihat di GitHub</a></p>
+                </div>
+                <div class="item">
+                    <h3>Calculator Project Bucin</h3>
+                    <p class="period">2025</p>
+                    <p>Mengembangkan aplikasi kalkulator berbasis web menggunakan HTML, CSS, dan JavaScript, dengan logika khusus: if 1+1 = I LOVE U else mengikuti logika aritmatika normal.</p>
+                    <p><a href="https://github.com/Muhammadabid7/Calculator-Project-Bucin" target="_blank">Lihat di GitHub</a></p>
+                </div>
+                <div class="item">
+                    <h3>Playlist Project</h3>
+                    <p class="period">2025</p>
+                    <p>Membangun aplikasi web untuk mengelola dan menampilkan playlist musik dengan antarmuka responsif menggunakan HTML, CSS, dan JavaScript, meningkatkan aksesibilitas konten multimedia.</p>
+                    <p><a href="https://github.com/Muhammadabid7/playlist-project" target="_blank">Lihat di GitHub</a></p>
                 </div>
             </section>
 
