--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="CV of Muhammad Abid Feriwijaya H., a web developer, reverse engineer, and technology enthusiast.">
     <meta name="keywords" content="CV, resume, web developer, reverse engineer, ethical hacker, Muhammad Abid">
     <meta name="author" content="Muhammad Abid Feriwijaya H.">
-    <title>CV Muhammad Abid Feriwijaya H.</title>
+    <title>CV Muhammad Abid Feriwijaya Hervian</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -17,7 +17,7 @@
         <header class="header">
             <img src="bidzz.png" alt="Profile picture of Muhammad Abid Feriwijaya H." class="profile-pic" loading="lazy">
             <div class="header-text">
-                <h1>Muhammad Abid Feriwijaya H.</h1>
+                <h1>Muhammad Abid Feriwijaya Hervian</h1>
             </div>
         </header>
 
@@ -33,10 +33,10 @@
             <section class="section profile">
                 <h2><i class="fas fa-user" aria-hidden="true"></i> Profil Pribadi</h2>
                 <ul>
-                    <li><i class="fas fa-calendar-alt" aria-hidden="true"></i> <span class="label">Tanggal Lahir:</span> 8 Mei 2007</li>
-                    <li><i class="fas fa-venus-mars" aria-hidden="true"></i> <span class="label">Jenis Kelamin:</span> Laki-laki</li>
-                    <li><i class="fas fa-ring" aria-hidden="true"></i> <span class="label">Status Pernikahan:</span> Belum Menikah</li>
-                    <li><i class="fas fa-flag" aria-hidden="true"></i> <span class="label">Kewarganegaraan:</span> Indonesia</li>
+                    <li><i class="fas fa-calendar-alt" aria-hidden="true"></i> <span class="label">Tanggal Lahir :</span> 8 Mei 2007</li>
+                    <li><i class="fas fa-venus-mars" aria-hidden="true"></i> <span class="label">Jenis Kelamin :</span> Laki-laki</li>
+                    <li><i class="fas fa-ring" aria-hidden="true"></i> <span class="label">Status Pernikahan :</span> Belum Menikah</li>
+                    <li><i class="fas fa-flag" aria-hidden="true"></i> <span class="label">Kewarganegaraan :</span> Indonesia</li>
                 </ul>
             </section>
 
@@ -44,9 +44,9 @@
             <section class="section contact">
                 <h2><i class="fas fa-address-card" aria-hidden="true"></i> Informasi Kontak</h2>
                 <ul>
-                    <li><i class="fas fa-envelope" aria-hidden="true"></i> <span class="label">Email:</span> <a href="mailto:squadofthehervian@gmail.com">squadofthehervian@gmail.com</a></li>
-                    <li><i class="fas fa-phone" aria-hidden="true"></i> <span class="label">WhatsApp:</span> <a href="https://wa.me/6282350265164">0823-5026-5164</a></li>
-                    <li><i class="fas fa-map-marker-alt" aria-hidden="true"></i> <span class="label">Alamat:</span> <a href="https://maps.app.goo.gl/FZuBnbGTTbbUQZCV9" target="_blank">Jl. Kh. Wahid Hasyim II Gg. Wahyu</a></li>
+                    <li><i class="fas fa-envelope" aria-hidden="true"></i> <span class="label">Email :</span> <a href="mailto:squadofthehervian@gmail.com">squadofthehervian@gmail.com</a></li>
+                    <li><i class="fas fa-phone" aria-hidden="true"></i> <span class="label">WhatsApp :</span> <a href="https://wa.me/6282350265164">0823-5026-5164</a></li>
+                    <li><i class="fas fa-map-marker-alt" aria-hidden="true"></i> <span class="label">Alamat :</span> <a href="https://maps.app.goo.gl/FZuBnbGTTbbUQZCV9" target="_blank">Jl. Kh. Wahid Hasyim II Gg. Wahyu</a></li>
                     <li><i class="fas fa-globe" aria-hidden="true"></i> <span class="label">Portfolio:</span> <a href="https://bidzzofficial.my.id" target="_blank">Lihat Portfolio</a></li>
                 </ul>
             </section>
@@ -57,9 +57,7 @@
                 <div class="item">
                     <h3>MTs Nabil Husein</h3>
                     <p class="period">2019 - 2022</p>
-                    <p>Menyelesaikan pendidikan menengah dengan fokusвіт
-
-                    fokus pada studi agama dan akademik.</p>
+                    <p>Menyelesaikan pendidikan menengah dengan fokus pada studi agama dan akademik.</p>
                 </div>
                 <div class="item">
                     <h3>Pondok Pesantren Nabil Husein</h3>
@@ -118,12 +116,6 @@
                     <p><a href="https://takoyaki-mayumi.netlify.app" target="_blank">Kunjungi Situs</a></p>
                 </div>
                 <div class="item">
-                    <h3>BidzzMod Platform</h3>
-                    <p class="period">2025</p>
-                    <p>Membangun platform untuk berbagi aplikasi modifikasi secara etis kepada komunitas Telegram, dengan lebih dari 3500 anggota aktif.</p>
-                    <p><a href="https://bidzzmod.my.id" target="_blank">Kunjungi Situs</a></p>
-                </div>
-                <div class="item">
                     <h3>Lua XOR Encrypt</h3>
                     <p class="period">2024</p>
                     <p>Mengembangkan alat enkripsi Lua berbasis XOR untuk pengembang, mendukung Game Guardian dan Logitech Macro, dengan fokus pada privasi.</p>
@@ -138,15 +130,23 @@
                     <p><a href="https://github.com/BIDZZ-RAWR/Firebase-Breaker" target="_blank">Lihat di GitHub</a></p>
                 </div>
                 <div class="item">
+                    <h3>BidzzMod Platform</h3>
+                    <p class="period">2025</p>
+                    <p>Membangun platform untuk berbagi aplikasi modifikasi secara etis kepada komunitas Telegram, dengan lebih dari 3500 anggota aktif.</p>
+                    <p><a href="https://bidzzmod.my.id" target="_blank">Kunjungi Situs</a></p>
+                </div>
+                <div class="item">
                     <h3>Calculator Project Bucin</h3>
                     <p class="period">2025</p>
-                    <p>Mengembangkan aplikasi kalkulator berbasis web menggunakan HTML, CSS, dan JavaScript, dengan logika khusus: if 1+1 = I LOVE U else mengikuti logika aritmatika normal.</p>
+                    <p>Mengembangkan aplikasi kalkulator berbasis web menggunakan HTML, CSS, dan JavaScript, dengan logika khusus : if 1+1 = I LOVE U else mengikuti logika aritmatika normal.</p>
+                    <p><a href="https://kalkulator-project-gabut.netlify.app" target="_blank">Kunjungi Situs</a></p>
                     <p><a href="https://github.com/Muhammadabid7/Calculator-Project-Bucin" target="_blank">Lihat di GitHub</a></p>
                 </div>
                 <div class="item">
                     <h3>Playlist Project</h3>
                     <p class="period">2025</p>
                     <p>Membangun aplikasi web untuk mengelola dan menampilkan playlist musik dengan antarmuka responsif menggunakan HTML, CSS, dan JavaScript, meningkatkan aksesibilitas konten multimedia.</p>
+                    <p><a href="https://bidzz-playlist.netlify.app" target="_blank">Kunjungi Situs</a></p>
                     <p><a href="https://github.com/Muhammadabid7/playlist-project" target="_blank">Lihat di GitHub</a></p>
                 </div>
             </section>
@@ -193,18 +193,18 @@
                 <h2><i class="fas fa-comment-dots" aria-hidden="true"></i> Hubungi Saya</h2>
                 <form id="contact-form">
                     <div class="form-group">
-                        <label for="name">Nama:</label>
+                        <label for="name">Nama :</label>
                         <input type="text" id="name" name="name" required aria-required="true" aria-label="Nama lengkap">
                     </div>
                     <div class="form-group">
-                        <label for="email">Email:</label>
+                        <label for="email">Email :</label>
                         <input type="email" id="email" name="email" required aria-required="true" aria-label="Alamat email">
                     </div>
                     <div class="form-group">
-                        <label for="message">Pesan:</label>
+                        <label for="message">Pesan :</label>
                         <textarea id="message" name="message" rows="4" required aria-required="true" aria-label="Pesan Anda"></textarea>
                     </div>
-                    <button type="submit" class="btn" aria-label="Kirim pesan via WhatsApp"><i class="fab fa-whatsapp" aria-hidden="true"></i> Kirim via WhatsApp</button>
+                    <button type="submit" class="btn" id="whatsapp-btn" aria-label="Kirim pesan via WhatsApp"><i class="fab fa-whatsapp" aria-hidden="true"></i> Kirim via WhatsApp</button>
                     <button type="button" class="btn" id="email-btn" aria-label="Kirim pesan via Email"><i class="fas fa-envelope" aria-hidden="true"></i> Kirim via Email</button>
                 </form>
             </section>
