--- a/index.html
+++ b/index.html
@@ -55,16 +55,6 @@
             <section class="section education">
                 <h2><i class="fas fa-graduation-cap" aria-hidden="true"></i> Pendidikan</h2>
                 <div class="item">
-                    <h3>MTs Nabil Husein</h3>
-                    <p class="period">2019 - 2022</p>
-                    <p>Menyelesaikan pendidikan menengah dengan fokus pada studi agama dan akademik.</p>
-                </div>
-                <div class="item">
-                    <h3>Pondok Pesantren Nabil Husein</h3>
-                    <p class="period">2019 - 2022</p>
-                    <p>Mempelajari nilai-nilai kepemimpinan, disiplin, dan kerja sama tim melalui program pesantren.</p>
-                </div>
-                <div class="item">
                     <h3>SMK Negeri 6 Samarinda</h3>
                     <p class="period">2022 - 2025</p>
                     <p>Jurusan Teknik Pengelasan, mempelajari keterampilan pengelasan, teknologi fabrikasi logam, dan keselamatan kerja.</p>
@@ -112,7 +102,7 @@
                 <div class="item">
                     <h3>Takoyaki Mayumi Website</h3>
                     <p class="period">2025</p>
-                    <p>Mengembangkan website responsif untuk brand Takoyaki Mayumi di Samarinda menggunakan HTML, CSS, dan JavaScript, meningkatkan visibilitas online.</p>
+                    <p>Mengkembangkan website responsif untuk brand Takoyaki Mayumi di Samarinda menggunakan HTML, CSS, dan JavaScript, meningkatkan visibilitas online.</p>
                     <p><a href="https://takoyaki-mayumi.netlify.app" target="_blank">Kunjungi Situs</a></p>
                 </div>
                 <div class="item">
