--- a/index.html
+++ b/index.html
@@ -29,17 +29,6 @@
                 <p>Lulusan SMK Negeri 6 Samarinda dengan pengalaman sebagai kasir, juru masak, pekerja lapangan, dan pengembang web front-end. Memiliki keterampilan komunikasi, kerja tim, dan adaptasi yang kuat, aktif mengembangkan proyek teknologi seperti website dan alat pengembang, serta berbagi pengetahuan melalui tutorial YouTube. Berkomitmen untuk memberikan kontribusi inovatif di bidang teknologi.</p>
             </section>
 
-            <!-- Personal Profile -->
-            <section class="section profile">
-                <h2><i class="fas fa-user" aria-hidden="true"></i> Profil Pribadi</h2>
-                <ul>
-                    <li><i class="fas fa-calendar-alt" aria-hidden="true"></i> <span class="label">Tanggal Lahir :</span> 8 Mei 2007</li>
-                    <li><i class="fas fa-venus-mars" aria-hidden="true"></i> <span class="label">Jenis Kelamin :</span> Laki-laki</li>
-                    <li><i class="fas fa-ring" aria-hidden="true"></i> <span class="label">Status Pernikahan :</span> Belum Menikah</li>
-                    <li><i class="fas fa-flag" aria-hidden="true"></i> <span class="label">Kewarganegaraan :</span> Indonesia</li>
-                </ul>
-            </section>
-
             <!-- Contact Info -->
             <section class="section contact">
                 <h2><i class="fas fa-address-card" aria-hidden="true"></i> Informasi Kontak</h2>
@@ -129,7 +118,7 @@
                     <h3>Calculator Project Bucin</h3>
                     <p class="period">2025</p>
                     <p>Mengembangkan aplikasi kalkulator berbasis web menggunakan HTML, CSS, dan JavaScript, dengan logika khusus : if 1+1 = I LOVE U else mengikuti logika aritmatika normal.</p>
-                    <p><a href="https://kalkulator-project-gabut.netlify.app" target="_blank">Kunjungi Situs</a></p>
+                    <p><a href="https://kalkulator-project-gabut calculator.netlify.app" target="_blank">Kunjungi Situs</a></p>
                     <p><a href="https://github.com/Muhammadabid7/Calculator-Project-Bucin" target="_blank">Lihat di GitHub</a></p>
                 </div>
                 <div class="item">
@@ -144,37 +133,19 @@
             <!-- Skills -->
             <section class="section skills">
                 <h2><i class="fas fa-tools" aria-hidden="true"></i> Keterampilan</h2>
-                <ul class="skills-list">
-                    <li>
-                        <span><i class="fas fa-desktop" aria-hidden="true"></i> Reverse Engineer</span>
-                        <div class="progress-bar">
-                            <div class="progress" style="width: 87%;"></div>
-                        </div>
-                    </li>
-                    <li>
-                        <span><i class="fas fa-shield-alt" aria-hidden="true"></i> Ethical Hacker</span>
-                        <div class="progress-bar">
-                            <div class="progress" style="width: 42%;"></div>
-                        </div>
-                    </li>
-                    <li>
-                        <span><i class="fas fa-paint-brush" aria-hidden="true"></i> Web Designer</span>
-                        <div class="progress-bar">
-                            <div class="progress" style="width: 58%;"></div>
-                        </div>
-                    </li>
-                    <li>
-                        <span><i class="fas fa-code" aria-hidden="true"></i> Software Developer</span>
-                        <div class="progress-bar">
-                            <div class="progress" style="width: 62%;"></div>
-                        </div>
-                    </li>
-                    <li>
-                        <span><i class="fas fa-users" aria-hidden="true"></i> Kerja Sama Tim</span>
-                        <div class="progress-bar">
-                            <div class="progress" style="width: 80%;"></div>
-                        </div>
-                    </li>
+                <h3>Keterampilan Teknis</h3>
+                <ul class="skills-list technical-skills">
+                    <li><span><i class="fas fa-desktop" aria-hidden="true"></i> Reverse Engineer</span></li>
+                    <li><span><i class="fas fa-shield-alt" aria-hidden="true"></i> Ethical Hacker</span></li>
+                    <li><span><i class="fas fa-paint-brush" aria-hidden="true"></i> Web Designer</span></li>
+                    <li><span><i class="fas fa-code" aria-hidden="true"></i> Software Developer</span></li>
+                </ul>
+                <h3>Keterampilan Non-Teknis</h3>
+                <ul class="skills-list non-technical-skills">
+                    <li><span><i class="fas fa-users" aria-hidden="true"></i> Kerja Sama Tim</span></li>
+                    <li><span><i class="fas fa-chalkboard-teacher" aria-hidden="true"></i> Mampu Beradaptasi di Lingkungan Baru</span></li>
+                    <li><span><i class="fas fa-smile" aria-hidden="true"></i> Ramah</span></li>
+                    <li><span><i class="fas fa-hand-holding-heart" aria-hidden="true"></i> Mampu Menghadapi Tekanan</span></li>
                 </ul>
             </section>
 
